--- a/templates/topic_view.html
+++ b/templates/topic_view.html
@@ -82,13 +82,12 @@
 
                                 {% if message.user_id == session['user_id'] %}
                                     <form action="{{ url_for('delete_message', message_id=message.id) }}" method="POST"
-                                      onsubmit="return confirm('Are you sure you want to delete this message?');"
-                                      class="absolute top-2 right-2">
-                                        <button type="submit"
-                                            class="text-red-500 hover:text-red-700 text-sm">
-                                            <i class="fas fa-trash-alt"></i> Delete
+                                          onsubmit="return confirm('Are you sure you want to delete this message?');"
+                                          class="absolute top-2 right-2">
+                                        <button type="submit" class="text-red-500 hover:text-red-700 text-sm">
+                                        <i class="fas fa-trash-alt"></i> Delete
                                         </button>
-                                </form>
+                                    </form>
                             {% endif %}
                         </li>
                 {% else %}
